--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dropzone": "^11.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "sweetalert2": "^10.13.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
